<resources>
    <string name="app_name">Regional Data</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="sub_region">Sub-Region</string>
    <string name="languages">Languages</string>
    <string name="borders">Borders</string>
    <string name="population">Population</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="america">America</string>
    <string name="europe">Europe</string>
    <string name="oceania">Oceania</string>
    <string name="delete_database">Delete Database</string>
</resources>